tests/run/error_contract_ensures.out
emberc: runtime error: postcondition failed in 'doubled_is_positive' (ensures, line 4)
